--- a/index.html
+++ b/index.html
@@ -106,82 +106,82 @@
             <h2 class="estilosTitulos">Productos Destacados</h2>
             <div class="grid-productos">
                 <div class="card-producto" data-categoria="PC Gaming">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_918624-MLA75141289159_032024-O.webp"
+                    <img src="./img/Amd Ryzen 7 Ram 32gb.png"
                         alt="Producto 1" />
-                    <h3>Sable láser RGB</h3>
-                    <p>Ideal para fans de Star Wars. Iluminación personalizada y sonidos realistas.</p>
+                    <h3>Amd Ryzen 7 Ram 32gb</h3>
+                    <p>Ideal para los entusiastas de los videojuegos y tareas exigentes.</p>
                     <button>Comprar</button>
                 </div>
-                <div class="card-producto" data-categoria="Notebooks">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_630002-MLU54963956328_042023-O.webp"
+                <div class="card-producto" data-categoria="PC Gaming">
+                    <img src="./img/Pc Armada Intel Core I3 10100.png"
                         alt="Producto 2" />
-                    <h3>Funko Pop edición limitada</h3>
-                    <p>Coleccionables exclusivos de tus personajes favoritos.</p>
+                    <h3>Pc Armada Intel Core I3 10100</h3>
+                    <p>Para arrancar a Jugar</p>
                     <button>Comprar</button>
                 </div>
-                <div class="card-producto" data-categoria="Accesorios">
-                    <img src="https://www.megatone.net/images/Articulos/zoom2x/350/MKT0095TRG-1.jpg" alt="Producto 3" />
-                    <h3>Auriculares gamer</h3>
-                    <p>Sonido envolvente 7.1, micrófono con cancelación de ruido.</p>
+                <div class="card-producto" data-categoria="PC Gaming">
+                    <img src="./img/Amd Ryzen 5.png" alt="Producto 3" />
+                    <h3>Amd Ryzen 5</h3>
+                    <p>Aumenta tu rendimiento y juega al maximo.</p>
                     <button>Comprar</button>
                 </div>
 
-                <div class="card-producto" data-categoria="geek">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_642136-MLA54784705882_042023-O.webp" alt="Taza térmica de Hogwarts" />
-                    <h3>Taza térmica de Hogwarts</h3>
-                    <p>Revela los escudos de las casas con líquidos calientes. Mágica.</p>
+                <div class="card-producto" data-categoria="Accesorios">
+                    <img src="./img/teclado.png" alt="Teclado bluetooth Logitech" />
+                    <h3>Teclado bluetooth Logitech</h3>
+                    <p>Innovadores en diseño y tecnología, Logitech se encarga de brindar la mejor experiencia de uso para sus usuario.</p>
                     <button>Comprar</button>
                 </div>
-                <div class="card-producto" data-categoria="geek">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_926943-MLA70507579092_072023-O.webp" alt="Reloj despertador con forma de control" />
-                    <h3>Despertador control retro</h3>
-                    <p>Ideal para gamers nostálgicos. Diseño inspirado en mandos clásicos.</p>
+                <div class="card-producto" data-categoria="Accesorios">
+                    <img src="./img/discoexterno.png" alt="Western Digital WD Elements Portable" />
+                    <h3>Western Digital WD Elements Portable</h3>
+                    <p>Lleva tus archivos a donde quieras con el disco duro externo Western Digital WD Elements Portable WDBUZG0010BBK de 1TB en color negro.</p>
                     <button>Comprar</button>
                 </div>
-                <div class="card-producto" data-categoria="geek">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_969833-MLA69258090491_052023-O.webp" alt="Almohadón de Pac-Man" />
-                    <h3>Almohadón Pac-Man</h3>
-                    <p>Decorá tu espacio gamer con un clásico del arcade. Suave y divertido.</p>
+                <div class="card-producto" data-categoria="Notebooks">
+                    <img src="./img/macbook.png" alt="MacBook Air M2" />
+                    <h3>MacBook Air M2</h3>
+                    <p>MacBook Air M2 (2022) 13.6" color starlight 256GB SSD - Apple M.</p>
                     <button>Comprar</button>
                 </div>
                 
                 <div class="card-producto" data-categoria="gadgets">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_935529-MLA72067143888_102023-O.webp" alt="Mini proyector portátil" />
+                    <img src="./img/miniproyector.png" alt="Mini proyector portátil" />
                     <h3>Mini proyector portátil</h3>
                     <p>Proyecta tus series o juegos desde el celular en cualquier superficie.</p>
                     <button>Comprar</button>
                 </div>
                 <div class="card-producto" data-categoria="gadgets">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_883191-MLA53279804553_012023-O.webp" alt="Lámpara LED táctil" />
+                    <img src="./img/lamparatactil.png" alt="Lámpara LED táctil" />
                     <h3>Lámpara LED táctil</h3>
                     <p>Luz regulable ideal para escritorio. Activación táctil y carga USB.</p>
                     <button>Comprar</button>
                 </div>
                 <div class="card-producto" data-categoria="gadgets">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_928911-MLA72111119126_102023-O.webp" alt="Soporte flexible para celular" />
+                    <img src="./img/soporte.png" alt="Soporte flexible para celular" />
                     <h3>Soporte flexible para celular</h3>
                     <p>Perfecto para ver contenido sin usar las manos. Ajustable y giratorio.</p>
                     <button>Comprar</button>
                 </div>
 
-                <div class="card-producto" data-categoria="gadgets">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_928911-MLA72111119126_102023-O.webp" alt="Soporte flexible para celular" />
-                    <h3>Soporte flexible para celular</h3>
-                    <p>Perfecto para ver contenido sin usar las manos. Ajustable y giratorio.</p>
+                <div class="card-producto" data-categoria="geek">
+                    <img src="./img/tazamagica.png" alt="Taza Mágica Geek" />
+                    <h3>Taza Mágica Geek</h3>
+                    <p>Taza Mágica Geek Retro Mario Bros Termosensible.</p>
                     <button>Comprar</button>
                 </div>
 
-                <div class="card-producto" data-categoria="gadgets">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_928911-MLA72111119126_102023-O.webp" alt="Soporte flexible para celular" />
-                    <h3>Soporte flexible para celular</h3>
-                    <p>Perfecto para ver contenido sin usar las manos. Ajustable y giratorio.</p>
+                <div class="card-producto" data-categoria="geek">
+                    <img src="./img/comics.png" alt="El Eternauta" />
+                    <h3>El Eternauta</h3>
+                    <p>El Eternauta es la primera novela gráfica en español y la más relevante para el mundo hispanoamericano.</p>
                     <button>Comprar</button>
                 </div>
 
-                <div class="card-producto" data-categoria="gadgets">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_928911-MLA72111119126_102023-O.webp" alt="Soporte flexible para celular" />
+                <div class="card-producto" data-categoria="geek">
+                    <img src="./img/marvel.png" alt="Marvel" />
                     <h3>Soporte flexible para celular</h3>
-                    <p>Perfecto para ver contenido sin usar las manos. Ajustable y giratorio.</p>
+                    <p>Marvel La Enciclopedia, de Stan Lee.</p>
                     <button>Comprar</button>
                 </div>
                 
