--- a/tienda.html
+++ b/tienda.html
@@ -37,7 +37,7 @@
         </ul>
         <div class="topbar-right">
             <input type="text" placeholder="Buscar..." class="buscador">
-            <a href="login.html" class="icono-cuenta">
+            <a href="./micuenta.html" class="icono-cuenta">
                 <i class="fas fa-user"></i> Ingresar
             </a>
         </div>
