--- a/Contacto.html
+++ b/Contacto.html
@@ -36,10 +36,23 @@
             <li><a href="#"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
         </ul>
         <div class="topbar-right">
-            <input type="text" placeholder="Buscar..." class="buscador">
-            <a href="./micuenta.html" class="icono-cuenta">
-                <i class="fas fa-user"></i> Ingresar
-            </a>
+            <div class="cuenta-dropdown">
+                <div class="cuenta-icono" onclick="toggleDropdown()">
+                    <i class="fas fa-user"></i>
+                    <div class="cuenta-texto">
+                        <span>Ingresar</span><br />
+                        <strong>Cuenta</strong> <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+
+                <div class="cuenta-formulario" id="dropdownForm">
+                    <input type="email" placeholder="Usuario (email)" />
+                    <input type="password" placeholder="Contraseña" />
+                    <button class="btn-ingresar">INGRESAR</button>
+                    <a href="#" class="olvide">Olvidé mi Clave</a>
+                    <button class="btn-crear">Crear nueva cuenta</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -52,18 +65,10 @@
                 <ul class="flex-menu">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./tienda.html">Tienda</a></li>
-                    <!-- <li>
-                        <a href="./categorias.html">Categorías</a>
-                        <ul class="submenu">
-                            <li><a href="#">Gadgets</a></li>
-                            <li><a href="#">Geek</a></li>
-                            <li><a href="#">Oficina Tech</a></li>
-                        </ul>
-                    </li> -->
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./micuenta.html">Mi Cuenta</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
-                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li><a href="./carrito.html" > <span id="contador-carrito" class="contador-carrito">0</span><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -171,6 +176,10 @@
                 sin previo aviso.</small>
         </div>
     </footer>
+
+        <script src="./js/products.js"></script>
+    <script src="./js/carrito.js"></script>
+    
 </body>
 
 </html>
